# entro-qa-automation

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
entro_qa_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pages/: accounts_page.py  base_page.py  dashboard_page.py  exposed_inventory_page.py  login_page.py  risks_page.py  settings_page.py  vaulted_secrets_page.py
tests/: test_accounts.py  test_exposed_inventory.py  test_login_logout.py  test_navigation.py  test_risks.py  test_settings.py  test_vaulted_secrets.py  test_vaulted_secrets_export.py
utils/: selectors.py
